<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_oral"
    app:startDestination="@id/prepareFragment">

    <fragment
        android:id="@+id/prepareFragment"
        android:name="com.junpu.calculation.PrepareFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_prepare">
        <action
            android:id="@+id/action_prepareFragment_to_oralFragment"
            app:destination="@id/oralFragment" />
    </fragment>
    <fragment
        android:id="@+id/oralFragment"
        android:name="com.junpu.calculation.OralFragment"
        android:label="@string/calculation"
        tools:layout="@layout/fragment_oral">
        <action
            android:id="@+id/action_oralFragment_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.junpu.calculation.ResultFragment"
        android:label="@string/result"
        tools:layout="@layout/fragment_result">
        <action
            android:id="@+id/action_resultFragment_to_prepareFragment"
            app:destination="@id/prepareFragment" />
    </fragment>
</navigation>