<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.junpu.calculation.OralViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OralFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/textHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@{@string/high_score(vm.highScore)}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/high_score" />

        <TextView
            android:id="@+id/textCurScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/current_score(vm.curScore)}"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/current_score" />

        <TextView
            android:id="@+id/textLeftNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(vm.leftNumber)}"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/textAnswer"
            app:layout_constraintEnd_toStartOf="@+id/operator"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            tools:text="12" />

        <TextView
            android:id="@+id/operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.operator}"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/textLeftNumber"
            app:layout_constraintEnd_toStartOf="@+id/textRightNumber"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textLeftNumber"
            app:layout_constraintTop_toTopOf="@+id/textLeftNumber"
            tools:text="+" />

        <TextView
            android:id="@+id/textRightNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(vm.rightNumber)}"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/operator"
            app:layout_constraintEnd_toStartOf="@+id/textEqualSign"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/operator"
            app:layout_constraintTop_toTopOf="@+id/operator"
            tools:text="7" />

        <TextView
            android:id="@+id/textEqualSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal_sign"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/textRightNumber"
            app:layout_constraintEnd_toStartOf="@+id/textQuestionMark"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textRightNumber"
            app:layout_constraintTop_toTopOf="@+id/textRightNumber" />

        <TextView
            android:id="@+id/textQuestionMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_mark"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/textEqualSign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textEqualSign"
            app:layout_constraintTop_toTopOf="@+id/textEqualSign" />

        <TextView
            android:id="@+id/textAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.answer}"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLeftNumber"
            tools:text="@string/my_answer" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(1)}"
            android:text="@string/number_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(2)}"
            android:text="@string/number_2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn1"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn1"
            app:layout_constraintTop_toTopOf="@+id/btn1" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(3)}"
            android:text="@string/number_3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn2"
            app:layout_constraintTop_toTopOf="@+id/btn2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(4)}"
            android:text="@string/number_4"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn7"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn1" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(5)}"
            android:text="@string/number_5"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn4"
            app:layout_constraintEnd_toStartOf="@+id/btn6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toTopOf="@+id/btn4" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(6)}"
            android:text="@string/number_6"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn5"
            app:layout_constraintTop_toTopOf="@+id/btn5" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(7)}"
            android:text="@string/number_7"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(8)}"
            android:text="@string/number_8"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn7"
            app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn7"
            app:layout_constraintTop_toTopOf="@+id/btn7" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(9)}"
            android:text="@string/number_9"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn8"
            app:layout_constraintTop_toTopOf="@+id/btn8" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.number(0)}"
            android:text="@string/number_0"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnClear"
            app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toTopOf="@+id/btnClear" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> vm.clear()}"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toStartOf="@+id/btn0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toTopOf="@+id/btn0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>